rgbds-0.6.1/test/asm/def.err
error: def.asm(23):
    'constant' already defined at def.asm(10)
error: Assembly aborted (1 error)!
